@@ -38,7 +38,7 @@
 pw_domain char(96) not NULL, \
 pw_passwd char(128), \
 pw_uid int, pw_gid int, \
-pw_gecos char(48), \
+pw_gecos char(64), \
 pw_dir char(160), \
 pw_shell char(20), \
 pw_clear_passwd char(16), \
@@ -48,7 +48,7 @@ primary key (pw_name, pw_domain ) "
 pw_domain char(96) not null, \
 pw_passwd char(128), \
 pw_uid int, pw_gid int, \
-pw_gecos char(48), \
+pw_gecos char(64), \
 pw_dir char(160), \
 pw_shell char(20), \
 primary key (pw_name, pw_domain ) "
@@ -58,7 +58,7 @@ primary key (pw_name, pw_domain ) "
 #define TABLE_LAYOUT "pw_name char(32) not null, \
 pw_passwd char(128), \
 pw_uid int, pw_gid int, \
-pw_gecos char(48), \
+pw_gecos char(64), \
 pw_dir char(160), \
 pw_shell char(20), \
 pw_clear_passwd char(16), \
@@ -67,7 +67,7 @@ primary key (pw_name ) "
 #define TABLE_LAYOUT "pw_name char(32) not null, \
 pw_passwd char(128), \
 pw_uid int, pw_gid int, \
-pw_gecos char(48), \
+pw_gecos char(64), \
 pw_dir char(160), \
 pw_shell char(20), \
 primary key (pw_name ) "
